@@ -1,3 +1,9 @@
+2003-11-17  Mark Kettenis  <kettenis@gnu.org>
+
+	New testcase for PR backtrace/1435.
+	* gdb.arch/i386-unwind.exp: New file.
+	* gdb.arch/i386-unwind.c: New file.
+
 2003-11-17  Andrew Cagney  <cagney@redhat.com>
 
 	* lib/gdb.exp (compiler_info): New global.
